--- a/index.html
+++ b/index.html
@@ -7,7 +7,36 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>My library web app</h1>
+    <section>
+      <div class="container">
+        <h1>My library web app</h1>
+        <div>
+          <div class="book-form-wrapper">
+            <h2>Add a book:</h2>
+            <form class="book-form">
+              <label for="title">Title</label>
+              <input type="text" id="title" name="title" required />
+              <label for="author">Author</label>
+              <input type="text" id="author" name="author" required />
+              <label for="status">Status</label>
+              <select name="status" id="status">
+                <option value="read">Read</option>
+                <option value="not read">Not read</option>
+              </select>
+              <input type="submit" class="book-form__submit" />
+            </form>
+          </div>
+          <div class="books-headings">
+            <div>Title</div>
+            <div>Author</div>
+            <div>Status</div>
+            <div>Action</div>
+          </div>
+          <ul class="books"></ul>
+        </div>
+      </div>
+    </section>
+
     <script src="main.js"></script>
   </body>
 </html>
