--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
         <h1>My library web app</h1>
         <div>
           <div class="book-form-wrapper">
-            <h2>Add a book:</h2>
             <form class="book-form">
-              <label for="title">Title</label>
-              <input type="text" id="title" name="title" required />
-              <label for="author">Author</label>
-              <input type="text" id="author" name="author" required />
-              <label for="status">Status</label>
-              <select name="status" id="status">
-                <option value="read">Read</option>
-                <option value="not read">Not read</option>
-              </select>
-              <input type="submit" class="book-form__submit" />
+              <fieldset>
+                <legend>Add a book</legend>
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" required />
+                <label for="author">Author:</label>
+                <input type="text" id="author" name="author" required />
+                <label for="status">Status:</label>
+                <select name="status" id="status">
+                  <option value="Read">Read</option>
+                  <option value="Not read">Not read</option>
+                </select>
+                <input type="submit" class="book-form__submit" />
+              </fieldset>
             </form>
           </div>
           <div class="books-headings">
